#116 Simplify backup restoring